fixed toc shifting when active and changed width of list

--- a/assets/scss/pages/post.scss
+++ b/assets/scss/pages/post.scss
@@ -104,7 +104,7 @@ $tocBreakpoint: 1024px;
 
   a.active {
       color: rgb(51, 51, 51);
-      font-weight: bold;
+      text-shadow: 1px 0 0 currentColor;
   }
 }
 
