--- a/assets/scss/partials/_post-list.scss
+++ b/assets/scss/partials/_post-list.scss
@@ -1,7 +1,7 @@
 .post-list__container {
   margin: 0 auto;
   max-width: 1200px;
-  width: 100%;
+  width: 80%;
 
   @media screen and (min-width: $medium) {
     padding-left: 50px;
